--- a/blobdash.example.toml
+++ b/blobdash.example.toml
@@ -1,6 +1,6 @@
 name = "exampledash"
 logo = "https://www.pngmart.com/files/11/Rickrolling-PNG-Pic.png"
-accent_color = "#dc2626"
+accent_color = "dc2626"
 service_domain = "example.com"
 
 [dashdot]
@@ -17,35 +17,42 @@ widgets = [
 name = "librarian"
 desc = "read ebooks"
 icon = "https://cdn.jsdelivr.net/gh/selfhst/icons/png/calibre-web.png"
+url = "https://google.com"
 
 [services.drawio]
 name = "draw"
 desc = "create drawings and diagrams"
 icon = "https://cdn.jsdelivr.net/gh/selfhst/icons/png/draw-io.png"
+url = "https://google.com"
 
 [services.grocy]
 name = "food"
 desc = "plan meals and track ingredients"
 icon = "https://cdn.jsdelivr.net/gh/selfhst/icons/png/grocy.png"
+url = "https://google.com"
 
 [services.homeassistant]
 name = "home"
 domain = "internal.example.com"
 desc = "control heaters, curtains and lights"
 icon = "https://cdn.jsdelivr.net/gh/selfhst/icons/png/home-assistant.png"
+url = "https://google.com"
 
 [services.immich]
 name = "photos"
 desc = "maintain a photo library"
 icon = "https://cdn.jsdelivr.net/gh/selfhst/icons/png/immich.png"
+url = "https://google.com"
 
 [services.jellyfin]
 name = "flix"
 domain = "seedbox.example.com"
 desc = "watch movies and tv"
 icon = "https://cdn.jsdelivr.net/gh/selfhst/icons/png/jellyfin.png"
+url = "https://google.com"
 
 [services.paperless-ngx]
 name = "paper"
 desc = "archive important documents"
 icon = "https://cdn.jsdelivr.net/gh/selfhst/icons/png/paperless-ngx.png"
+url = "https://google.com"
