--- a/blobdash.example.toml
+++ b/blobdash.example.toml
@@ -3,6 +3,17 @@ logo = "https://www.pngmart.com/files/11/Rickrolling-PNG-Pic.png"
 accent_color = "dc2626"
 service_domain = "example.com"
 
+about = """
+<h4>Welcome to my dashboard</h4>
+<p>
+    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
+    labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
+    laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in
+    voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat
+    non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+</p>
+"""
+
 [auth]
 header = "X-App-User"
 logout_url = "https://example.com"
