--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -20,9 +20,12 @@ jobs:
             packages: write
 
         steps:
-            - name: Checkout repository
-              uses: actions/checkout@v3
+            - name: Set up QEMU
+              uses: docker/setup-qemu-action@v3
 
+            - name: Set up Docker Buildx
+              uses: docker/setup-buildx-action@v3
+            
             - name: Log in to GHCR
               uses: docker/login-action@v2
               with:
@@ -36,10 +39,14 @@ jobs:
               with:
                   images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
 
+            - name: Checkout repository
+              uses: actions/checkout@v3
+
             - name: Build and push
               uses: docker/build-push-action@v4
               with:
                   context: .
+                  platforms: linux/amd64,linux/arm64
                   push: true
                   tags: ${{ steps.meta.outputs.tags }}
                   labels: ${{ steps.meta.outputs.labels }}
