Use pydantic-settings for configuration management with defaults

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,9 @@ requires-python = ">=3.12"
 dependencies = [
     "click>=8.1.7",
     "flask>=3.0.3",
+    "pydantic-extra-types>=2.10.0",
+    "pydantic>=2.10.1",
+    "pydantic-settings>=2.6.1",
     "waitress>=3.0.1",
 ]
 
