--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "blobdash"
-version = "0.3.2"
+version = "0.3.3-dev"
 readme = "README.md"
 authors = [
     { name = "thcrt", email = "110127860+thcrt@users.noreply.github.com" }
