Add `mantelo` for Keycloak API

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ dependencies = [
     "pydantic-settings>=2.6.1",
     "waitress>=3.0.1",
     "authentik-client>=2024.10.4.post1733219872",
+    "mantelo>=2.1.1",
 ]
 
 [build-system]
